# state-aligned-stockout-inventory-system

./: .gitignore  ASSUMPTION_REGISTRY.md  Amazon08_run_verified_v4.ps1  BUSINESS_DECISION_MEMO.md  CHANGELOG.md  DATA_CARD.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  OPERATIONS_RUNBOOK.md  README.md  RELEASE_DECISION.md  SCIENCE_DESIGN.md  VALIDATION_REPORT.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: auto_local.yaml  m5_expanded_v1.yaml  m5_expanded_v2_confirmation.yaml  m5_smoke.yaml  smoke.yaml
constraints/: base.txt
docs/: release_qualification.md
reports/m5_expanded_v1/: metrics_summary.json  release_gate.json  release_report.md
reports/m5_expanded_v2_confirmation/: metrics_summary.json  release_gate.json  release_report.md
reports/m5_smoke/: metrics_summary.json  release_gate.json  release_report.md
reports/synthetic_smoke/: metrics_summary.json  release_gate.json  release_report.md
scripts/: _archive_safety.py  check_optional_capabilities.py  generate_readme_visuals.py  package_release.py  run_chronos.py  run_pipeline.py  run_runtime_smoke.py  run_spark_features.py  run_sql_marts.py  verify_archive.py  verify_repository.py
sql/: build_daily_demand_mart.sql  build_inventory_kpi_mart.sql
src/inventory_ai/: __init__.py  cli.py  config.py  contracts.py  pipeline.py
tests/integration/: test_m5_optional.py  test_pipeline.py
tests/regression/: test_repository_outputs.py
tests/unit/: test_censoring_and_state.py  test_chronos_adapter.py  test_config_and_contracts.py  test_constrained_selection.py  test_router.py  (+6 more)
(+20 files in other folders)
