[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "state-aligned-stockout-inventory-system"
dynamic = ["version"]
description = "State-aligned, stockout-aware probabilistic demand forecasting and closed-loop inventory decision framework."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Jinwoo Bae"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scikit-learn>=1.4,<1.9",
  "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7", "build>=1.2,<2"]
chronos = ["chronos-forecasting[extras]>=2.2,<3", "torch>=2.5"]
spark = ["pyspark>=3.5,<4"]

[project.scripts]
inventory-ai = "inventory_ai.cli:main"

[tool.setuptools.dynamic]
version = {attr = "inventory_ai.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: end-to-end integration tests",
  "optional: optional dependency tests",
]
